fix overlapped index table icons

--- a/apps/admin/client/layouts/default.less
+++ b/apps/admin/client/layouts/default.less
@@ -26,3 +26,8 @@
 .ui.bottom.fixed.actions.menu button {
     border: none;
 }
+.stackable.grid{
+    .four.wide.column{
+        z-index: -1;
+    }
+}
